--- a/nutrition-label.html
+++ b/nutrition-label.html
@@ -10,12 +10,41 @@
 </head>
 <body>
     <div class="label">
-        <heade>
+        <header>
             <h1 class="bold">Nutrition Facts</h1>
             <div class="divider"></div>
             <p>8 servings per container</p>
             <p class="bold">Serving size <span>2/3 cups (55g)</span></p>
-        </heade>
+        </header>
+        <div class="divider large"></div>
+        <div class="calories-info">
+            <div class="left-container">
+                <h2 class="bold small-text">Amount per serving</h2>
+                <p>Calories</p>
+            </div>
+            <span>230</span>
+        </div>
+        <div class="divider medium"></div>
+        <div class="daily-value small-text">
+            <p class="bold right no-divider">% Daily Value *</p>
+            <div class="divider"></div>
+            <p><span><span class="bold">Total Fat</span> 8g</span> <span class="bold">10%</span></p>
+            <p class="indent no-divider">Saturated Fat 1g <span class="bold">5%</span></p>
+            <div class="divider"></div>
+            <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
+            <div class="divider"></div> 
+            <p><span><span class="bold">Cholesterol</span> 0mg</span> <span class="bold">0%</span></p>
+            <p><span><span class="bold">Sodium</span> 85mg</span> <span class="bold">4%</span></p>
+            <p><span><span class="bold">Total Carbohydrate</span> 20g</span><span class="bold">7%</span></p>
+            <p class="indent no-divider">Dietary Fiber less than 1g <span class="bold">2%</span></p>
+            <div class="divider"></div>
+            <p class="indent no-divider">Total Sugars 8g</p>
+            <div class="divider double-indent"></div>
+            <p class="double-indent no-divider">Includes 8g Added Sugars <span class="bold">16%</span></p>
+            <div class="divider"></div>
+            <p class="no-divider"><span><span class="bold">Protein</span> 1g</span></p>
+            <div class="divider large"></div>
+        </div>
     </div>
 </body>
 </html>
